# bobs-island

./: .gitignore  .gitmodules  CMakeLists.txt  all-repos.sh  dep-linux.sh  scene.json  simplicity.json
assets/glsl/: fragmentBlend.glsl  fragmentDefault.glsl  fragmentGaussian.glsl  fragmentSun.glsl  fragmentUI.glsl  fragmentWater.glsl  vertexWater.glsl
assets/hlsl/: vertexDefault.hlsl
bobs-island/: .cproject  .project  CMakeLists.txt  bobs-island.vcxproj  fragmentDefault.cso  fragmentRocket.cso  vertexDefault.cso  vertexRocket.cso
bobs-island-client/: CMakeLists.txt  bobs-island-client.vcxproj
bobs-island-client/src/main/c++/bobs-island/client/: ClientEngine.cpp  ClientEngine.h  Main.cpp  MeshLoader.cpp  MeshLoader.h  SunMover.cpp  SunMover.h
bobs-island-client/src/main/c++/bobs-island/client/bob/: BobController.cpp  BobController.h
bobs-island-client/src/main/glsl/: my.fs  rocket.fs  vertexDefault.glsl  vertexMultiDraw.glsl  vertexRocket.glsl
bobs-island-client/src/main/hlsl/: fragmentRocket.hlsl
bobs-island-client/src/main/rcss/: console.rcss
bobs-island-client/src/main/rml/: console.rml
bobs-island-server/: CMakeLists.txt  bobs-island-server.vcxproj
bobs-island-server/src/main/c++/bobs-island/server/: Main.cpp  ServerEngine.cpp  ServerEngine.h
bobs-island/src/main/c++/bobs-island/: BobConstants.h  BobControl.cpp  BobControl.h  BobLooker.cpp  BobLooker.h  BobMover.cpp  BobMover.h  BobShooter.cpp  BobShooter.h  FlippingEngine.cpp  FlippingEngine.h  Main.cpp  MeshLoader.cpp  MeshLoader.h  SunEngine.cpp  SunEngine.h  SunMover.cpp  SunMover.h
bobs-island/src/main/c++/bobs-island/bob/: BobController.cpp  BobController.h  BobFactory.cpp  BobFactory.h  BobLooker.cpp  BobLooker.h  BobMover.cpp  BobMover.h  BobShooter.cpp  BobShooter.h  BobState.h  BobsCodec.cpp  BobsCodec.h
bobs-island/src/main/glsl/: my.fs  my.gs  my.vs
bobs-island/src/main/hlsl/: fragmentDefault.hlsl  vertexRocket.hlsl
src/main/c++/bobs-island/client/: Client.cpp
src/main/c++/bobs-island/common/: SandPit.cpp  SandPit.h  Setup.cpp  Setup.h  SunMover.cpp  SunMover.h  WaterAnimator.cpp  WaterAnimator.h
src/main/c++/bobs-island/common/bob/: BobFactory.cpp  BobFactory.h  BobLooker.cpp  BobLooker.h  BobMover.cpp  BobMover.h  BobShooter.cpp  BobShooter.h
src/main/c++/bobs-island/main/: Main.cpp
src/main/c++/bobs-island/server/: SandPit.cpp  SandPit.h  Server.cpp  ServerEngine.cpp  ServerEngine.h  SunMover.cpp  SunMover.h
src/main/c++/bobs-island/server-main/: Main.cpp
src/main/c++/bobs-island/server/bob/: BobFactory.cpp  BobLooker.cpp  BobLooker.h  BobMover.cpp  BobMover.h
src/main/css/: ui.css
src/main/glsl/: fragmentDefault.glsl  fragmentRocket.glsl  vertexRocket.glsl  vertexUI.glsl
src/main/html/: ui.html
src/main/rcss/: header.rcss
src/main/rml/: header.rml
